# dnsnitch

./: .dockerignore  .gitignore  Dockerfile  README.md  circle.yml  dnsnitch.cabal
app/: Main.hs
script/: test
scripts/: deploy.sh  test
src/: Dnsnitch.hs
src/Dnsnitch/: Cache.hs  DNS.hs  HTTP.hs  Utils.hs
tests/: doctest.hs  hlint-custom.hs  hlint.hs  test.hs
