name:                dnsnitch
version:             0.1.0.0
synopsis:            DNS server snitcher
description:         Please see README.md
homepage:            https://github.com/HowNetWorks/dnsnitch#readme
bug-reports:         https://github.com/HowNetWorks/dnsnitch/issues
license:             MIT
license-file:        LICENSE
author:              Ossi Herrala
maintainer:          devnull@hownetworks.io
copyright:           2016 HowNetWorks
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  stack.yaml

source-repository head
  type:              git
  location:          https://github.com/HowNetWorks/dnsnitch

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  exposed-modules:     Dnsnitch
                     , Dnsnitch.Cache
                     , Dnsnitch.DNS
                     , Dnsnitch.HTTP
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cache
                     , cereal
                     , clock
                     , network
                     , scotty
                     , text
                     , QuickCheck

executable dnsnitch
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts=-N -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , dnsnitch

test-suite hlint
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             hlint.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts=-N
  build-depends:       base
                     , hlint

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             doctest.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts=-N
  build-depends:       base
                     , doctest
